--- a/wp-content/themes/humescore/style.css
+++ b/wp-content/themes/humescore/style.css
@@ -782,6 +782,10 @@ Footer
       background: #dd5252;
       cursor: pointer;
       border: 1px solid #dd5252; }
+    .site-footer .tagsWrapper p a {
+      text-transform: uppercase;
+      font-size: 12px;
+      line-height: 20px; }
   .site-footer p {
     margin-bottom: 0; }
 
@@ -1651,11 +1655,46 @@ navigationLinks
   text-decoration: none;
   padding-left: 0; }
 
-#tags .entry-meta {
-  font-size: 10px;
-  display: inline-block; }
-  #tags .entry-meta a {
-    font-size: 10px; }
+.tag .entry-meta {
+  font-size: 9px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  color: #7f7f7f; }
+  .tag .entry-meta a {
+    font-size: 9px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    color: #7f7f7f; }
+  .tag .entry-meta .vcard a:hover {
+    color: #000; }
+  .tag .entry-meta .posted-on a:hover {
+    color: #000; }
+  .tag .entry-meta .commentsNumber:hover {
+    color: #000; }
+
+.tag #content1 p {
+  margin-bottom: 0px;
+  line-height: 23px; }
+
+.tag .post-categories a {
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase; }
+
+.tag img {
+  opacity: 0.8; }
+  .tag img:hover {
+    opacity: 1; }
+
+.tag .text-Title {
+  margin-bottom: 10px; }
+
+.tag #Title .page-title {
+  font-size: 36px;
+  line-height: 39px;
+  color: #333333;
+  text-transform: lowercase; }
 
 /*--------------------------------------------------------------------------------------------
 	pages
