--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -2247,24 +2247,50 @@ navigationLinks
 		}
 		.searchTitle{
 			    color: #777;
-			    font-size: 13px;
+			    font-size: 12px;
+			    line-height:12px;
+			    letter-spacing:1px;
 			    margin-bottom: 0.6rem;
 			    display: inline-block;
 
 		}
+		.Searched{
+			font-size:36px;
+			line-height:39px;
+			color:#333333;
+		}
 	}
 	.searchPage{
+		.post-categories a {
+    border-bottom: 1px solid red;
+    text-decoration: none;
+    color: #333;
+    font-size: 12px;
+    line-height:20px;
+    letter-spacing:1px;
+    text-transform:uppercase;
+}
 		img{
 			width:100%;
-		    height:330px;
-
+		    height:auto;
+			opacity:0.8;
+			&:hover{
+				opacity:1;
+			}
 		}
 		 .entry-title {
     		text-align: left;
+    		margin-bottom:25px;
     		a{
-    			    color: #777;
+    			    color: #000;
+    			    font-size:24px;
+					line-height:26px;
+					letter-spacing:2px;
 				    text-decoration: none;
 				    border: none;
+				    &:hover{
+				    	opacity:0.8;
+				    }
     		}
     	}
     	#content1 {
@@ -2272,7 +2298,20 @@ navigationLinks
 }
 .entry-meta {
     border-bottom: none;
+    justify-content:start;
+    margin-top:30px;
+    .vcard a:hover{
+    	color:#000;
+    }
+    .posted-on a:hover{
+		color:#000;
 }
+	.commentsNumber a:hover{
+		color:#000;
+}
+
+}
+
 .applyBorderSearch{
 	    border-bottom: 1px solid $borderColor;
 		padding-bottom: 2rem;
@@ -2323,6 +2362,16 @@ navigationLinks
 }
 .inputHeight{
 			    height: 96px;
+		}
+		.linkMore{
+			a{
+				text-transform:uppercase !important;
+			}
+		}
+		.search{
+			.site-main {
+   				 padding: 60px 0;
+}
 		}
 /*--------------------------------------------------------------------------------------------
 mediaqueries
