--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -2322,8 +2322,17 @@ navigationLinks
 		width:20%;
 		margin:0 auto;
 		text-align:center;
+		margin-bottom: 45px;
+		p{
+			font-size:12px;
+			line-height:12px;
+			letter-spacing:1px;
+			color: #777;
+		}
 		span{
-			font-size:24px;
+			font-size:36px;
+			line-height:39px;
+			color:#333333;
 		}
 		 span:before{
 		    	content:"\201C";
@@ -2338,7 +2347,8 @@ navigationLinks
 		h1{
 			color: #8a6d3b;
 		    padding-top: 1rem;
-		    font-size: 16px;
+		    font-size: 18px;
+		    line-height:19px;
 		    padding-bottom: 1rem;
 
 		}
@@ -2347,13 +2357,15 @@ navigationLinks
 		}
 		.search-field{
 			width: 100%;
-		    padding: 8px 10px;
-		    color: #777;
-		    border:1px solid $borderColor;
+	        padding: 6px 12px;
+		    color: #666;
+	        border: 1px solid #f0f0f0;
+            font-size: 14px;
 		    &:focus{
 		    	border:1px solid black;
 		    }
 		}
+
 		
 	}
 }
