--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -1515,6 +1515,15 @@ front-Page
 			line-height:20px !important;
 			letter-spacing:1px !important;
 		}
+		 .vcard a:hover{
+    			color:#000;
+    }
+  		  .posted-on a:hover{
+				color:#000;
+}
+		.commentsNumber a:hover{
+			color:#000;
+}
 	}
 	.category{
 			margin-top:1rem;
