--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -836,6 +836,10 @@ Single Posts
 		width:100%;
 		img{
 			width:100% !important;
+			opacity:0.8;
+			&:hover{
+				opacity:1;
+			}
 		}
 	}
 
@@ -853,6 +857,9 @@ Single Posts
 		    font-size: 16px;
 		    line-height:17px;
 			text-transform:capitalize;
+			&:hover{
+				opacity:0.8;
+			}
 			
 		}
 			margin-top:1rem;
