--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -210,7 +210,17 @@ blockquote:after {
 							font-size: 10px;
     						color: #333;
 						}
-					
+					.sub-menu:before{
+						content:"";
+						width: 0; 
+					  height: 0; 
+					  position:absolute;
+					  top:-14px;
+					  border-left: 9px solid transparent;
+					  border-right:9px solid transparent;
+					   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.08);
+					  border-bottom: 9px solid #f0f0f0;
+					}
 					.sub-menu{
 						list-style:none;
 					    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.08);
@@ -2027,7 +2037,7 @@ navigationLinks
 	}
 	.category{
 		    margin-bottom: 15px;
-		    width: 69px;
+		    width: 52px;
 		 	border-bottom: 1px solid red;
 		 	text-transform:uppercase;
 		 	font-size:12px;
