--- a/wp-content/themes/humescore/style.css
+++ b/wp-content/themes/humescore/style.css
@@ -176,6 +176,16 @@ blockquote:after {
       padding-left: 2px;
       font-size: 10px;
       color: #333; }
+    .menu .menu-item .sub-menu:before {
+      content: "";
+      width: 0;
+      height: 0;
+      position: absolute;
+      top: -14px;
+      border-left: 9px solid transparent;
+      border-right: 9px solid transparent;
+      box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.08);
+      border-bottom: 9px solid #f0f0f0; }
     .menu .menu-item .sub-menu {
       list-style: none;
       box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.08);
@@ -1610,7 +1620,7 @@ navigationLinks
     margin-bottom: 0px; }
   #content1 .category {
     margin-bottom: 15px;
-    width: 69px;
+    width: 52px;
     border-bottom: 1px solid red;
     text-transform: uppercase;
     font-size: 12px;
