--- a/wp-content/themes/humescore/style.css
+++ b/wp-content/themes/humescore/style.css
@@ -178,14 +178,14 @@ blockquote:after {
       color: #333; }
     .menu .menu-item .sub-menu:before {
       content: "";
-      width: 0;
-      height: 0;
       position: absolute;
-      top: -14px;
-      border-left: 9px solid transparent;
-      border-right: 9px solid transparent;
-      box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.08);
-      border-bottom: 9px solid #f0f0f0; }
+      left: 15px;
+      width: 12px;
+      height: 12px;
+      border: 12px solid transparent;
+      border-bottom-color: #f0f0f0;
+      bottom: 100%;
+      margin-left: -4px; }
     .menu .menu-item .sub-menu {
       list-style: none;
       box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.08);
