--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -217,7 +217,7 @@ blockquote:after {
 					    width: 12px;
 					    height: 12px;
 					    border: 12px solid transparent;
-					    border-bottom-color: #f0f0f0;
+					    border-bottom-color: #ececec;
 					    bottom: 100%;
 					    margin-left: -4px;
 					}
