=arrow fix in the menu lighter color

--- a/wp-content/themes/humescore/sass/index.scss
+++ b/wp-content/themes/humescore/sass/index.scss
@@ -220,6 +220,7 @@ blockquote:after {
 					    border-bottom-color: #ececec;
 					    bottom: 100%;
 					    margin-left: -4px;
+				        opacity: 0.4;
 					}
 					.sub-menu{
 						list-style:none;
